# BinaryTreeProject

./: .gitignore  CMakeLists.txt  README.md  binarytree.cpp  binarytree.h  main.cpp  treegenerator.cpp  treegenerator.h
